--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "tspriorityqueue",
   "main": "./lib/index.js",
+	"types": "./lib/index.d.ts",
   "repository": "github.com/iskolbin/tspriorityqueue",
   "description": "Priority queue implemented as indirect binary heap in TS",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "license": "MIT",
   "scripts": {
 		"test": "./node_modules/typescript/bin/tsc --experimentalDecorators -t es5 test.ts && ./node_modules/nyc/bin/nyc.js --reporter html --reporter text ./node_modules/mocha/bin/mocha test.js",
