--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
 	"types": "./lib/index.d.ts",
   "repository": "github.com/iskolbin/tspriorityqueue",
   "description": "Priority queue implemented as indirect binary heap in TS",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "license": "MIT",
   "scripts": {
 		"test": "./node_modules/typescript/bin/tsc --experimentalDecorators -t es5 test.ts && ./node_modules/nyc/bin/nyc.js --reporter html --reporter text ./node_modules/mocha/bin/mocha test.js",
-		"build": "./node_modules/typescript/bin/tsc",
-    "prepublish": "npm run build"
+		"lib": "./node_modules/typescript/bin/tsc",
+    "prepublish": "npm run lib"
   },
   "devDependencies": {
     "typescript": "^2.3.2",
