--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
 		"test": "./node_modules/typescript/bin/tsc --experimentalDecorators -t es5 test.ts && ./node_modules/nyc/bin/nyc.js --reporter html --reporter text ./node_modules/mocha/bin/mocha test.js",
 		"lib": "./node_modules/typescript/bin/tsc",
-    "prepublish": "npm run lib"
+    "prepare": "npm run lib"
   },
   "devDependencies": {
     "typescript": "^2.3.2",
